--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,6 +4,8 @@
 {{ partial "global-case-study.html" . }}
 {{ else if (eq .Params.slug "monnai-case-study") }}
 {{ partial "monnai-case-study.html" . }}
+{{ else if (eq .Params.slug "finance-case-study") }}
+{{ partial "finance-case-study.html" . }}
 {{ else if (eq .Params.slug "sh-case-study") }}
 {{ partial "globalisation-case-study" . }}
 {{ else if or (in .Params.tags "Case Study") (in .Params.categories "Case Study") }}
