--- a/layouts/partials/global-case-study.html
+++ b/layouts/partials/global-case-study.html
@@ -11,7 +11,7 @@
 
             <div class="stats-container mt-5">
                 <div class="stats">
-                    <p>42+</p>
+                    <p>52+</p>
                     <p>Countries with product presence</p>
                 </div>
                 <div class="stats">
@@ -20,15 +20,15 @@
                 </div>
                 <div class="stats">
                     <p>15k+</p>
-                    <p> Global users added</p>
+                    <p>Global users added</p>
                 </div>
                 <div class="stats">
                     <p>7</p>
-                    <p>days for adding new languages</p>
+                    <p>days to add a new language</p>
                 </div>
                 <div class="stats">
                     <p>RTL</p>
-                    <p> Language support</p>
+                    <p>Language support</p>
                 </div>
             </div>
         </div>
@@ -50,15 +50,31 @@
             </div>
 
             <p class="paragraph-body">
-                The client is a leading, comprehensive global mental health solution provider for employers. They began their journey in 2016, with a valuation of $2 billion in September 2021, and have been steadily growing ever since.
+                Our client is a leading, comprehensive global mental health solution provider that advocates for better mental healthcare benefits for everyone. They achieve this by delivering personalized solutions that fit the individual while providing the proper clinical guidance and emotional support.
+            </p>
+            <p class="paragraph-body">
+                Our client started their journey in 2016 and received series C funding, resulting in a valuation of $2 billion in 2021. They now offer top-quality mental healthcare solutions worldwide.
             </p>
 
             <h2 class="section-heading mt-5">WHAT WE DID</h2>
-            <p class="paragraph-body">We brought about some great results by working as an extension of our client’s engineering
-                team.
+            <p class="paragraph-body">
+                Our client’s reach was limited to English speakers in the US for the first few years. As part of their expansion strategy, they now needed to add native language support and take their solution global.
             </p>
-            <p class="paragraph-body">A keen study of our client’s requirements and careful selection of suitable solutions helped us
-                achieve the following for our client:
+            <p class="paragraph-body-list">
+                Expanding the product presented its own set of challenges that included the following:
+            </p>
+            <ul class="item-list">
+                <li>
+                    Scalability of the existing design
+                </li>
+                <li>
+                    Support for new countries
+                </li>
+                <li>
+                    Support for new languages
+                </li>
+            </ul>
+            <p class="paragraph-body">A keen study of the existing product and our client’s requirements, a careful selection of suitable solutions, and close collaboration with the client helped us achieve the goal of delivering a highly scalable solution in a short time. Some of our key wins include:
             </p>
             <div class="what-we-did-container">
                 <div class="item">
@@ -66,7 +82,7 @@
                         <img class="rounded-circle" style="width: 62px; height: 62px;background: #D9D9D9 !important;"
                             src="{{ .Params.what_we_did_icon_1 |relURL }}">
                     </div>
-                    <p class="label">Roll out the new global framework within three months</p>
+                    <p class="label">Three months to make the product globalization ready</p>
                 </div>
 
                 <div class="item">
@@ -74,7 +90,7 @@
                         <img class="rounded-circle" style="width: 62px; height: 62px;background: #D9D9D9 !important;"
                         src="{{ .Params.what_we_did_icon_2 |relURL }}">
                     </div>
-                    <p class="label">Enable the client to rapidly introduce its product in new countries with minimal effort</p>
+                    <p class="label">Following this, under seven days and minimal development effort to introduce a new language</p>
                 </div>
 
                 <div class="item">
@@ -82,7 +98,7 @@
                         <img class="rounded-circle" style="width: 62px; height: 62px;background: #D9D9D9 !important;"
                         src="{{ .Params.what_we_did_icon_3 |relURL }}">
                     </div>
-                    <p class="label">Expand product presence in 42+ countries in 22+ languages</p>
+                    <p class="label">Launched in 52+ countries and 22+ languages in the following months</p>
                 </div>
 
                 <div class="item">
@@ -90,17 +106,16 @@
                         <img class="rounded-circle" style="width: 62px; height: 62px;background: #D9D9D9 !important;"
                         src="{{ .Params.what_we_did_icon_4 |relURL }}">
                     </div>
-                    <p class="label">Build trust and long-term association with the client and execute their vision and strategic
-                        direction</p>
+                    <p class="label">Built trust and long-term association with the client to execute their vision and strategic direction</p>
                 </div>
 
-                <div class="item">
+                <!-- <div class="item">
                     <div class="rounded-circle bg-secondary">
                         <img class="rounded-circle" style="width: 62px; height: 62px;background: #D9D9D9 !important;"
                         src="{{ .Params.what_we_did_icon_5 |relURL }}">
                     </div>
                     <p class="label">Improved client satisfaction and global business</p>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="banner-container bg-deep_blue text-center testimonial">
@@ -124,7 +139,7 @@
                 <a href="#highlight_1">
                     <div class="item">
                         <p class="index">1.</p>
-                        <p class="label">Defining the Problem</p>
+                        <p class="label">Creating the approach</p>
                         <img style="width: 28px; height: auto; align-self: start;"
                         src="{{ .Params.right_arrow |relURL }}">
                     </div>
@@ -168,33 +183,23 @@
             </div>
 
             <h3 class="project-highlights-subheading mt-5" id="highlight_1">
-                1. Defining the Problem
+                1. Creating the approach
             </h3>
 
             <p class="paragraph-body mt-3">
-                Our client’s reach was limited within the US region for the first few years. They wanted to
-                    expand and reach a global audience by localizing the experience and providing high-quality
-                    care in numerous nations and languages.
+                When building software products, content is often distributed across the application. Some are UI-embedded, while some come from the backend and the database. 
             </p>
-
-            <p class="paragraph-body-list">
-                Expanding such a product presented its own set of challenges that included the following:
-            </p>
-            <ul class="item-list">
-                <li>
-                    Scalability of the product
-                </li>
-                <li>
-                    Support for new countries
-                </li>
-                <li>
-                    Support for new languages
-                </li>
-            </ul>
 
             <p class="paragraph-body">
-                In just three months, our team collaborated closely with the client to develop and deploy a
-                    framework to close the gap in global offerings, saving our clients both money and time.
+                To ensure all content is delivered in the language of the user’s location, there needs to be a framework that supports retrieving the content in the appropriate language.
+            </p>
+
+            <p class="paragraph-body">
+                Our approach was to extract the strings of content, save their translations, and serve this translated version to the end user. To achieve this, we set up several steps in the frontend, backend, and database. 
+            </p>
+
+            <p class="paragraph-body">
+                As part of the strategy to enhance user experience, we also made our solution more user-friendly by translating emails and supporting right-to-left languages.
             </p>
         </div>
         <div class="text-container">
@@ -203,36 +208,21 @@
             </h3>
 
             <p class="paragraph-body mt-3">
-                Every software product typically communicates with its users through its UI.
+                Every software product typically communicates with its users through its UI. Our first challenge was translating the UI based on the user’s language preference.
             </p>
             <p class="paragraph-body">
-                Since language is one of the most crucial aspects affecting the user’s experience across the
-                board, we needed a proper strategy to present various pieces of the puzzle, like emails, web
-                content, and even database content.
+                The first step in tackling the content embedded in the UI was to move it from code to simple text files so that, down the line, introducing new languages can become as easy as replicating the flat file in a different language.
             </p>
             <p class="paragraph-body">
-                Our first challenge was translating the UI based on the user’s language preference.
+                We used JSON files to separate code from the language embedded in it. We did this so that all the content is available in one place and a translation service can easily translate this content.
             </p>
-            <p class="paragraph-body-list">
-                The solutions that we took included:
+            <p class="paragraph-body">
+                The next step we took involved generalizing all hardcoded words to use dynamically changing content based on the user’s location, for instance, displaying helplines based on the user’s locality. 
             </p>
-            <ul class="item-list">
-                <li>
-                    Separating languages from DB or UI to flat files
-                </li>
-                <li>
-                    Separating code from the language embedded in it using JSON files
-                </li>
-                <li>
-                    Generalizing hardcoded words and statements to use localized and dynamic versions
-                </li>
-                <li>
-                    Introducing a third-party translation provider Crowdin
-                </li>
-                <li>
-                    Integrating Crowdin with GitHub PR workflow to provide automated translations
-                </li>
-            </ul>
+            <p class="paragraph-body">
+                Lastly, we introduced Crowdin, a third-party translation provider, to get translations for new languages. To extend this further, we integrated Crowdin with GitHub PR workflow so that the automated pipelines can handle the translations without manual intervention from a developer.
+            </p>
+        </div>
             
         <div class="text-container">
 
@@ -240,24 +230,18 @@
                 3. Next Step, the Backend 
             </h3>
 
-            <p class="paragraph-body-list pt-3">
-                Regarding the application’s backend, we took similar steps to those in the frontend to ensure the
-                user experience was never disrupted.
+            <p class="paragraph-body mt-3">
+                In the backend, we maintained consistency and took similar steps to those in the frontend, ensuring no disruption to the user experience. 
             </p>
-            <ul class="item-list">
-                <li>
-                    Identified and extracted required database content to YAML locale files
-                </li>
-                <li>
-                    Configured the application to serve localized content based on the user’s language preference
-                </li>
-                <li>
-                    Introduced third-party translation provider Crowdin for database translations
-                </li>
-                <li>
-                    Integrated Crowdin with GitHub PR workflow to provide automated translations in the backend
-                </li>
-            </ul>
+            <p class="paragraph-body">
+                Since language is one of the most crucial aspects affecting the user’s experience, we needed a proper strategy to present various puzzle pieces such as web and database content.
+            </p>
+            <p class="paragraph-body">
+                The content served from the database was passed to the frontend directly without any translations. To change this, we configured the application to serve the translated data content to make this process seamless and used YAML files to store this translated data.
+            </p>
+            <p class="paragraph-body">
+                In the backend too, we configured the application to serve localized content based on the user’s language preferences. For database translations, we used Crowdin here as well. 
+            </p>
         </div>
         <div class="text-container">
 
@@ -265,36 +249,43 @@
                 4. Solution for Emails 
             </h3>
 
-            <p class="paragraph-body">
-                In the case of emails, we integrated a third-party mail service provider, Iterable. We also
-                migrated existing emails to utilize easy-to-edit templates.
+            <p class="paragraph-body mt-3">
+                Next, we also wanted customers to receive emails in their target language.
             </p>
-
             <p class="paragraph-body">
-                For our client, this meant a better overall experience as well. Mails are now translated and can
-                be modified without a dependency on the developer, removing a significant bottleneck for the
-                client’s marketing team.
+                In the case of emails, we integrated a third-party mail service provider, Iterable. Iterable offers smooth email translations thanks to its locale-based templates that automatically translate content based on the user's preference. For existing emails, we migrated them to use these easy-to-edit templates. 
+            </p>
+            <p class="paragraph-body">
+                In the future, our client's marketing team can effortlessly launch events and email campaigns with these easy-to-edit templates.
+            </p>
+            <p class="paragraph-body">
+                For our client, this meant a better overall experience as well. Mails are now translated and can be modified without a dependency on the developer, removing a significant bottleneck for the client's marketing team.
             </p>
         </div>
         <div class="text-container">
 
             <h3 class="project-highlights-subheading mt-4" id="highlight_5">
-                4. Support for RTL Languages
+                5. Support for RTL Languages
             </h3>
 
-            <p class="paragraph-body">
-                While the application empowered users to access content in their selected language, the
-                support for RTL language felt natural and intuitive.
+            <p class="paragraph-body mt-3">
+                While the application empowered users by enhancing language accessibility, the support for right-to-left (RTL) languages felt natural and intuitive.
             </p>
-
             <p class="paragraph-body">
-                For right-to-left languages, we identified the elements and interactions better to provide
-                additional support to users. We added support for bidirectional text and icons. At the same time,
-                we added smart exceptions based on the content type.
+                The support for RTL languages was meticulously designed so that language barriers did not limit users. In fact, we identified the various elements and interactions to support RTL languages and incorporated them into the application. 
+            </p>
+            <p class="paragraph-body">
+                Moreover, we also added support for bidirectional text and icons, which are essential for RTL languages. These features ensure that users can read and navigate through the application seamlessly without any confusion. 
+            </p>
+            <p class="paragraph-body">
+                We also incorporated smart exceptions based on the content type. With these enhancements, users can access a broader range of content in their preferred language and enjoy an unparalleled experience while using the application. 
+            </p>
+            <p class="paragraph-body">
+                Overall, these improvements transformed our solution into a robust tool that met the diverse needs of each end-user.
             </p>
         </div>
     </div>
-    {{ partial "recommend-case-study.html" . }}
+    {{ partial "global-recommend-case-study.html" . }}
     {{ partial "lets-talk.html" . }}
 </div>
 
